k8s/cart-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-deployment
  labels:
    app: cart-service-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: cart-service-deployment
  template:
    metadata:
      labels:
        app: cart-service-deployment
    spec:
      containers:
      - name: cart-service-api
        image: mrstevebang/saboobo-cart-api:2.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cart-api-service
spec:
  selector:
    app: cart-service-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
