k8s/customer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-deployment
  labels:
    app: customer-service-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: customer-service-deployment
  template:
    metadata:
      labels:
        app: customer-service-deployment
    spec:
      containers:
      - name: customer-service-api
        image: mrstevebang/saboobo-customer-api:1.0.3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customer-api-service
spec:
  selector:
    app: customer-service-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
