k8s/media-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service-deployment
  labels:
    app: media-service-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: media-service-deployment
  template:
    metadata:
      labels:
        app: media-service-deployment
    spec:
      containers:
      - name: media-service-api
        image: mrstevebang/saboobo-media-api:1.0.2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: media-api-service
spec:
  type: LoadBalancer
  selector:
    app: media-service-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
