k8s/merchant-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merchant-service
  labels:
    app: merchant-service
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: merchant-service
  template:
    metadata:
      labels:
        app: merchant-service
    spec:
      containers:
      - name: merchant-service-api
        image: mrstevebang/saboobo-merchant-api:1.2.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: merchant-api-service
spec:
  selector:
    app: merchant-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
