k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service-api
        image: mrstevebang/saboobo-notification-api:2.2.6
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification-api-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
