k8s/pg-admin-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin-product-deployment
  template:
    metadata:
      labels:
        app: pgadmin-product-deployment
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  type: LoadBalancer
  selector:
    app: pgadmin-product-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
