k8s/pg-customer.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-customer-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-customer-deploy
  template:
    metadata:
      labels:
        app: pg-customer-deploy
    spec:
      containers:
        - name: postgres
          image: 'postgres:17'
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: azure
              subPath: customer
      volumes:
        - name: azure
          csi:
            driver: file.csi.azure.com
            volumeAttributes:
              secretName: azure-secret
              shareName: saboobo-azfile
              mountOptions: 'dir_mode=0700,file_mode=0700,uid=999,gid=999,cache=strict,actimeo=30,nosharesock,nobrl'
---
apiVersion: v1
kind: Service
metadata:
  name: pg-customer-service
  labels:
    app: postgres
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: pg-customer-deploy
