k8s/pg-notification.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-notification
spec:
  serviceName: "pg-notification"
  replicas: 1
  selector:
    matchLabels:
      app: pg-notification
  template:
    metadata:
      labels:
        app: pg-notification
    spec:
      containers:
        - name: postgres
          image: 'postgres:17'
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
              subPath: notification
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: pg-notification-service
  labels:
    app: postgres
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: pg-notification
