k8s/pg-product.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-product-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pg-product-deploy
  template:
    metadata:
      labels:
        app: pg-product-deploy
    spec:
      containers:
        - name: postgres
          image: 'postgres:17'
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: pg-product-service
  labels:
    app: postgres
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: pg-product-deploy
