k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
  labels:
    app: product-service-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: product-service-deployment
  template:
    metadata:
      labels:
        app: product-service-deployment
    spec:
      containers:
      - name: product-service-api
        image: mrstevebang/saboobo-product-api:1.0.3
        ports:
        - containerPort: 5154
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service-deployment
  ports:
    - protocol: TCP
      port: 5154
      targetPort: 5154
