k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: user-service-deployment
  template:
    metadata:
      labels:
        app: user-service-deployment
    spec:
      containers:
      - name: user-service-api
        image: mrstevebang/saboobo-user-api:1.3.3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  selector:
    app: user-service-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - port: 50051
      targetPort: 50051
      name: grpc
