k8s/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-saboobo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Optional: Use cert-manager if you want automatic certificate provisioning
spec:
  tls:
  - hosts:
    - api.steve-bang.com
    secretName: api-saboobo-tls-secret  # Use a secret for the TLS certificate
  rules:
  - host: api.steve-bang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 8080
